Refactor parameter access method in TypeMessage class.
Replaced calls to `get(0)` with `getFirst()` for better readability and alignment with method semantics. This change improves code clarity and follows more intuitive conventions.